param taski